#1 Fixed background expand/collapse image url

--- a/docdoku-server/docdoku-server-web/src/main/webapp/css/product-structure.css
+++ b/docdoku-server/docdoku-server-web/src/main/webapp/css/product-structure.css
@@ -109,17 +109,6 @@ html{
   color: #434C64;
 }
 
-.treeview li {
-background: url(../images/treeview-default-line.gif) 0 0 no-repeat;
-}
-
-.treeview .hitarea {
-  background: url(../images/treeview-default.gif) -64px -25px no-repeat;
-}
-
-.treeview li.lastCollapsable, .treeview li.lastExpandable { 
-  background-image: url(../images/treeview-default.gif); 
-} 
 
 [class^="icon-"] {
   background-image: none;
